--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="create_an_account">Create An Account</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="this_is_second_activity">This is Second Activity</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="you_have_already_registered_login">You have already Registered Login</string>
 </resources>
